Overflow Issue Resolve

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,4 +1,3 @@
 .content {
   padding-inline: 1rem;
-  overflow-y: auto;
 }
