--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,10 @@ body {
   font-family: "Source Sans Pro", sans-serif !important;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: auto;
   line-height: 1.75em;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
